--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,4 +1,4 @@
-name: Xcode Cloud Build
+name: Trigger Xcode Cloud Workflow
 
 on:
   push:
@@ -19,27 +19,17 @@ jobs:
       - name: Set Up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'  # Change if needed
+          python-version: '3.9'  # Change version if needed
 
       - name: Install Dependencies
         run: |
-          pip install jwt cryptography requests
+          pip install --upgrade pip
+          pip install pyjwt cryptography requests
 
       - name: Generate JWT Token
         run: |
-          echo "Generating JWT Token..."
-          echo "import jwt, time
-          from jwt.algorithms import ECAlgorithm
-          private_key = \"${{ secrets.PRIVATE_KEY }}\"
-          key_id = \"${{ secrets.APPLE_KEY_ID }}\"
-          payload = {\"iat\": int(time.time()), \"exp\": int(time.time()) + 600, \"aud\": \"xcode-cloud\"}
-          token = jwt.encode(payload, private_key, algorithm='ES256', headers={\"kid\": key_id})
-          print(f'::set-output name=JWT_TOKEN::{token}')" > generate_jwt.py
           python generate_jwt.py
 
       - name: Run Xcode Cloud Workflow
         run: |
-          echo "Running Xcode Cloud Workflow..."
-          curl -X POST "https://developer.apple.com/xcode-cloud/api/workflows/${{ secrets.XCODE_CLOUD_WORKFLOW_ID }}/start" \
-            -H "Authorization: Bearer $JWT_TOKEN" \
-            -H "Content-Type: application/json"
+          python trigger_xcode_cloud.py
