--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -33,3 +33,11 @@ jobs:
       - name: Run Xcode Cloud Workflow
         run: |
           python trigger_xcode_cloud.py
+      - name: Debug Environment Variables
+        run: |
+          echo "Checking environment variables..."
+          echo "APPLE_KEY_ID: ${APPLE_KEY_ID}"
+          echo "APPLE_ISSUER_ID: ${APPLE_ISSUER_ID}"
+          echo "XCODE_CLOUD_WORKFLOW_ID: ${XCODE_CLOUD_WORKFLOW_ID}"
+          if [ -z "$PRIVATE_KEY" ]; then echo "❌ PRIVATE_KEY is missing!"; exit 1; fi
+    
